firts window alterations

--- a/ui_window/window_one.ui
+++ b/ui_window/window_one.ui
@@ -45,7 +45,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>../imgs/window_one.png</pixmap>
+     <pixmap>../imgs/Escape_room_img.png</pixmap>
     </property>
    </widget>
    <widget class="QPushButton" name="torresButton">
@@ -80,7 +80,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="correctButton">
+   <widget class="QPushButton" name="salaButton">
     <property name="geometry">
      <rect>
       <x>264</x>
@@ -94,6 +94,70 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="civicButton">
+    <property name="geometry">
+     <rect>
+      <x>124</x>
+      <y>232</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0,0,0,0)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="fabioButton">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>110</y>
+      <width>61</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0,0,0,0)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="timasButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>250</y>
+      <width>131</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0,0,0,0)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="correctButton">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>313</y>
+      <width>21</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(0,0,0,0)</string>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
