--- a/ui_window/window_clebinho.ui
+++ b/ui_window/window_clebinho.ui
@@ -48,20 +48,17 @@
      <pixmap>../imgs/clebinho_final.png</pixmap>
     </property>
    </widget>
-   <widget class="QPushButton" name="photoButton">
+   <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>400</y>
+      <x>30</x>
+      <y>600</y>
       <width>75</width>
       <height>41</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgba(0,0,0,0)</string>
-    </property>
     <property name="text">
-     <string/>
+     <string>Voltar</string>
     </property>
    </widget>
   </widget>
